# beyond-compare-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/beyond_compare_mcp/: __init__.py  __main__.py  config.py  pyproject.toml  server.py  standalone_server.py  utils.py
src/beyond_compare_mcp/tests/: test_beyond_compare.py
src/tests/: test_basic.py
